welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: not found: value setpos
      setpos(0,(getY()+1))
      ^